# tuna-man

./: Cargo.toml  README.md  data.csv
.github/workflows/: rust.yml
src/: args.rs  main.rs  tournament.rs
src/tournament/: format.rs  players.rs  structs.rs  tests.rs
src/tournament/format/: double_elimination.rs  round_robin.rs  single_elimination.rs
src/tournament/players/: tests.rs
