[package]
name = "tuna-man"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "No-bullshit, lightweight, Tournament Manager with a cli."
# documentation = "https://docs.rs/tuna-man"
repository = "https://codeberg.org/jark/tuna-man"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
fastrand = "2.3.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
